# biscuit

./: .editorconfig  .gitignore  .gitmodules  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  SECURITY.md  a.py  biscuit.spec  fetch.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sample.py  search.py  sitemap.xml  test.ipynb  test.py  test2.py  tests.py
.biscuit/: launch.toml  workspace.toml
.devcontainer/: devcontainer.json
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: artifact-macos.yml  artifact-ubuntu.yml  artifact-windows.yml  code_quality.yml  codequality.yml  docs.yml  linting.yml  nightly.yml  nuitka.yml  python-app.yml
.ignorethis/: README.md  index.md
.ignorethis/api/: app.md  cli.md
.ignorethis/stylesheets/: extra.css
api/app/: index.html
api/cli/: index.html
biscuit/: __init__.py  __main__.py  app.py
biscuit/config/: bindings.json  bindings.toml  default.toml  settings.toml
biscuit/core/: __init__.py  api.py  commands.py  config.py  events.py  exec.py  extensions.py  gui.py  history.py  root.py
biscuit/core/api/: __init__.py  commands.py  editors.py  endpoint.py  logger.py  notifications.py  statusbar.py  theme.py  utils.py  views.py
biscuit/core/components/: __init__.py  helpers.py  history.py
biscuit/core/config/: __init__.py  font.py  loadconfig.py
biscuit/core/events/: __init__.py
biscuit/core/layout/: README.md  __init__.py
biscuit/core/res/: __init__.py  loadres.py
biscuit/core/settings/: __init__.py  editor.py  items.py  res.py  searchbar.py  section.py  styles.py
biscuit/core/styles/: __init__.py
biscuit/core/utils/: __init__.py  binder.py  callername.py  canvas.py  closelistitem.py  codicon.py  colorizer.py  dpi_demo.py  entry.py  events.py  fixedstack.py  iconbutton.py  iconlabelbutton.py  linklabel.py  python_dialog.py  scrollbar.py  shortcut.py  sysinfo.py  text.py  textutils.py  toplevel.py  tree.py  window_demo.py
biscuit/extensions/: dev.py  developMenuBar.py  sample.py  snake.py  typo.py  welcome.py
cli/: index.html
config/: settings.toml
docs/: cli.md  docusaurus.config.js  next.config.mjs  package-lock.json  package.json  proxy.ts
docs/app/: global.css  layout.tsx
docs/app/(home)/: page.tsx
docs/app/docs/: layout.tsx
docs/app/llms-full.txt/: route.ts
docs/app/llms.txt/: route.ts
docs/docs/: Welcome.md  intro.md
docs/docs/developer-docs/: _category_.json  app-class.md  layout.md  relations.md  (+2 more)
docs/getting-started/: installation.md  quick-start.md
docs/lib/: shared.ts  source.ts
docs/overrides/: home.html
docs/stylesheets/: extra.css
docs/usage/: cli.md
extensions/: black.py  dev.py  isort.py  pastemyst.py  pycodestyle.py
getting-started/installation/: index.html
getting-started/quick-start/: index.html
javascripts/: extra.js
overrides/: home.html
presets/: README.md  example.lucky.py  example.shells.py
resources/bitmap/: indentguide.xbm  line.xbm
resources/fonts/: NOTICE
scripts/: README.md  build.py  codicon_mappings.py  linux.spec  macos.spec  material_codepoints.py  windows.spec
search/: search_index.json
src/: __init__.py  __main__.py  main.py  test.py  testgrid.py
src/biscuit/: __init__.py  __main__.py  app.py  binder.py  commands.py  config.py  events.py  exec.py  execution.py  extensions.py  gui.py  history.py  io.py  main.py  session.py
src/cli/: README.md  cli.py  editor.py  extensions.py  git.py
src/config/: default.json  settings.json
src/core/: __init__.py  app.py  base.py  root.py
src/lib/: base.py  editor.py  root.py  settings.py
stylesheets/: extra.css
tests/: .env  conftest.py  test_app.py  test_settings.py  test_version.py
usage/cli/: index.html
(+876 files in other folders)
