[tool.poetry]
name = "biscuit-editor"
version = "3.5.0"
description = "A lightweight, fast, and extensible code editor with a growing community"
authors = ["Billy <billydevbusiness@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "biscuit", from = "src" }]
include = ["./resources/**/*"]

[tool.poetry.scripts]
biscuit = "biscuit.cli:run"

[tool.poetry.dependencies]
python = "^3.10"
hintedtext = "^0.6.0"
watchdog = "^6.0.0"
filetype = "^1.2.0"
gitpython = "^3.1.44"
pygments = "^2.19.1"
toml = "^0.10.2"
sv-ttk = "^2.6.0"
pillow = ">=11.1,<13.0"
requests = "^2.32.3"
pyperclip = "^1.9.0"
tkinterweb = {extras = ["full"], version = "^4.17.6"}
mistune = "^3.1.2"
chardet = "^5.2.0"
pywinpty = { version = ">=2.0.15,<4.0.0", platform = "win32" }
python-tkdnd = "^0.2.1"
psutil = "^7.0.0"
google-genai = "^1.61.0"
sortedcontainers = "^2.4.0"
click = "^8.1.8"
tarts = "^0.20.1"
editorconfig = "^0.17.0"
tkextrafont = { version = "^0.6.3", platform = "win32" }
ptyprocess = { version = "^0.7.0", platform = "linux" }
anthropic = "^0.77.0"
tree-sitter = "^0.25.2"
tree-sitter-language-pack = "^0.13.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.2.1,<10.0.0"
pytest-dotenv = "^0.5.2"
git-changelog = "^2.5.2"
pyperclip = "^1.8.2"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocstrings-python = ">=1.12,<3.0"
mkdocs-material = "^9.5.40"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
